--- a/TravelPal/Pages/HeaderPage.xaml
+++ b/TravelPal/Pages/HeaderPage.xaml
@@ -5,10 +5,63 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TravelPal.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="{StaticResource PageHeight}" d:DesignWidth="{StaticResource PageWidth}"
-      Title="HeaderPage">
+      d:DesignHeight="{StaticResource HeaderHeight}" 
+      d:DesignWidth="{StaticResource HeaderWidth}"
+      Title="HeaderPage"
+      Background="{StaticResource GradientHeaderBackground}"
+      >
 
     <Grid>
-        
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+        </Grid.RowDefinitions>
+
+        <StackPanel
+            Grid.Column="2"
+            Grid.Row="0"
+            Orientation="Vertical">
+            <Button
+                Name="BtnExitApp"
+                Width="20"
+                Height="20"
+                HorizontalAlignment="Right"
+                Padding="0,0,0,0"
+                Content="❌"
+                BorderThickness="0"
+                Background="Transparent" Click="BtnExitApp_Click">
+                
+            </Button>
+
+
+            <TextBox
+                Name="TxtBxLogInStatus"
+                Background="Transparent"
+                FontSize="10"
+                Text="PlaceHolder"
+                Foreground="{StaticResource TextColor}"
+                TextAlignment="Right"
+                Margin="0,5,0,0"
+                Padding="0,0,10,0"
+                BorderThickness="0"
+            />
+            <TextBox
+                Name="TxtBxUserName"
+                Background="Transparent"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Text="PlaceHolder"
+                TextAlignment="Right"
+                Foreground="{StaticResource TextColor}"
+                Padding="0,0,10,0"
+                BorderThickness="0"/>
+
+        </StackPanel>
+
     </Grid>
 </Page>
