--- a/TravelPal/Pages/HeaderPage.xaml
+++ b/TravelPal/Pages/HeaderPage.xaml
@@ -9,7 +9,8 @@
       d:DesignWidth="{StaticResource HeaderWidth}"
       Title="HeaderPage"
       Background="{StaticResource GradientHeaderBackground}"
-      >
+      ShowsNavigationUI="False"
+      DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
     <Grid>
 
@@ -21,6 +22,35 @@
 
         <Grid.RowDefinitions>
         </Grid.RowDefinitions>
+
+        <!--<StackPanel
+            Grid.Column="0"
+            Grid.Row="0"
+            Orientation="Vertical">
+
+            <TextBox
+                Name="LblCountryHeadline"
+                Background="Transparent"
+                FontSize="10"
+                Text="PlaceHolder"
+                Foreground="{StaticResource TextColor}"
+                TextAlignment="Left"
+                Margin="0,25,0,0"
+                Padding="0,0,10,0"
+                BorderThickness="0"
+            />
+            <TextBox
+                Name="TxtBxCountry"
+                Background="Transparent"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Text="PlaceHolder"
+                HorizontalAlignment="Left"
+                Foreground="{StaticResource TextColor}"
+                Padding="0,0,10,0"
+                BorderThickness="0"/>
+
+        </StackPanel>-->
 
         <StackPanel
             Grid.Column="2"
@@ -43,7 +73,6 @@
                 Name="TxtBxLogInStatus"
                 Background="Transparent"
                 FontSize="10"
-                Text="PlaceHolder"
                 Foreground="{StaticResource TextColor}"
                 TextAlignment="Right"
                 Margin="0,5,0,0"
@@ -55,7 +84,6 @@
                 Background="Transparent"
                 VerticalAlignment="Center"
                 FontSize="20"
-                Text="PlaceHolder"
                 TextAlignment="Right"
                 Foreground="{StaticResource TextColor}"
                 Padding="0,0,10,0"
