--- a/TravelPal/Pages/LogInPage.xaml
+++ b/TravelPal/Pages/LogInPage.xaml
@@ -8,9 +8,96 @@
       d:DesignHeight="{StaticResource PageHeight}" 
       d:DesignWidth="{StaticResource PageWidth}"
       Title="LogInPage"
-      Background="{StaticResource BlueMint}">
+      Background="Transparent"
+      ShowsNavigationUI="False"
+      DataContext="{Binding RelativeSource={RelativeSource Self}}"
+      >
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="4*"></ColumnDefinition>
+            <ColumnDefinition Width="4*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+
+        </Grid.RowDefinitions>
+
+
+        <Label
+            Grid.Column="1"
+            Grid.Row="1"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Right"
+            Content="User Name:"
+            FontSize="30"
+            Foreground="{StaticResource TextColor}"
+            />
+        <TextBox
+            Name="TxtBxUserName"
+            Grid.Column="2"
+            Grid.Row="1"
+            Background="#10000000"
+            BorderThickness="0,0,0,1.1"
+            Margin="0,0,80,0"
+            BorderBrush="Black"
+            VerticalContentAlignment="Center"
+            FontSize="20"
+            Width="auto"
+            Height="50"
+            Text="{Binding UserName}"/>
+
+        <Label
+            Grid.Column="1"
+            Grid.Row="2"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Right"
+            Content="Password:"
+            FontSize="32"
+            Foreground="{StaticResource TextColor}"
+            />
+        <TextBox
+            Name="TxtBxPassword"
+            Grid.Column="2"
+            Grid.Row="2"
+            Background="#10000000"
+            BorderThickness="0,0,0,1.1"
+            BorderBrush="Black"
+            VerticalContentAlignment="Center"
+            FontSize="20"
+            Width="auto"
+            Margin="0,0,80,0"
+            Height="50"
+            Text="{Binding Password}"/>
+
+        <StackPanel
+            Grid.Column="1"
+            Grid.Row="3"
+            Grid.ColumnSpan="2"
+            >
+            <Label
+                Name="LblErrorInfo"
+                FontSize="30"
+                Content=""
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                Foreground="Red"/>
+            <Button
+                Name="BtnLogIn"
+                
+                Background="{StaticResource DarkMint}"
+                Width="180"
+                Height="60"
+                Content="Log In"
+                FontSize="30"
+                FontWeight="Bold" Click="BtnLogIn_Click"
+            />
+        </StackPanel>
     </Grid>
 </Page>
