--- a/TravelPal/Pages/RegisterPage.xaml
+++ b/TravelPal/Pages/RegisterPage.xaml
@@ -8,7 +8,8 @@
       d:DesignHeight="{StaticResource PageHeight}" 
       d:DesignWidth="{StaticResource PageWidth}"
       Title="RegisterPage"
-      Background="{StaticResource GradientHeaderBackground}">
+      Background="{StaticResource GradientHeaderBackground}"
+      ShowsNavigationUI="False">
 
     <Grid>
         <Grid.ColumnDefinitions>
