--- a/TravelPal/Pages/SplashScreenPage.xaml
+++ b/TravelPal/Pages/SplashScreenPage.xaml
@@ -9,6 +9,7 @@
       d:DesignWidth="{StaticResource PageWidth}"
       Title="SplashScreenPage"
       Background="Transparent"
+      ShowsNavigationUI="False"
       >
     <!--Background="{StaticResource GradientSplashScreen}"-->
     <Grid>
@@ -25,20 +26,65 @@
         </Grid.RowDefinitions>
 
         <TextBlock
-            Grid.Column="1"
-            Grid.Row="1"
-            FontFamily="{StaticResource MainFont}"
-            FontSize="100"
-            FontWeight="ExtraBold"
-            Text="TravelPal"
-            VerticalAlignment="Center"
-            HorizontalAlignment="Center"
-            >
-
+    Name="TxtBlckLogoLogIn"
+    Grid.Column="1"
+    Grid.Row="1"
+    FontFamily="{StaticResource MainFont}"
+    FontSize="100"
+    FontWeight="ExtraBold"
+    Text="TravelPal"
+    VerticalAlignment="Center"
+    HorizontalAlignment="Center"
+    MouseLeftButtonDown="TxtBlckLogoLogIn_OnMouseLeftButtonDown">
+            <TextBlock.Style>
+                <Style TargetType="TextBlock">
+                    <Setter Property="Opacity" Value="1" />
+                    <Style.Triggers>
+                        <EventTrigger RoutedEvent="MouseEnter">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0" Duration="0:0:0.5" />
+                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)">
+                                        <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="Log In" />
+                                    </ObjectAnimationUsingKeyFrames>
+                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.5" BeginTime="0:0:0.5" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="MouseLeave">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0" Duration="0:0:0.5" />
+                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)">
+                                        <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="TravelPal" />
+                                    </ObjectAnimationUsingKeyFrames>
+                                    <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.5" BeginTime="0:0:0.5" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
             <TextBlock.LayoutTransform>
                 <RotateTransform Angle="-11" />
-            </TextBlock.LayoutTransform>  
-
+            </TextBlock.LayoutTransform>
         </TextBlock>
+
+        <Button
+            Grid.Column="1"
+            Grid.Row="2"
+            Content="Log In"
+            Width="100"
+            Height="40"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="{StaticResource DarkMint}"
+            Foreground="Black"
+            BorderBrush="Transparent"
+            BorderThickness="0"
+            FontSize="16"
+            FontWeight="Bold"
+            Click="ButtonBase_OnClick"
+        />
     </Grid>
 </Page>
