--- a/TravelPal/App.xaml
+++ b/TravelPal/App.xaml
@@ -47,6 +47,7 @@
         <!--Other Colors-->
 
         <SolidColorBrush x:Key="TextColor" Color="Black"></SolidColorBrush>
+        <SolidColorBrush x:Key="ButtonGreen" Color="Lime"></SolidColorBrush>
 
         <!--Other Colors END-->
 
@@ -68,6 +69,36 @@
         <!--The Diffrent heights of Pages, and windows END-->
 
 
+
+        <!--Diffrent styles-->
+        <!--<Style TargetType="TextBlock">
+            <Style.Triggers>
+                <EventTrigger RoutedEvent="MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0" Duration="0:0:0.5" />
+                            <StringAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)">
+                                <DiscreteStringKeyFrame KeyTime="0:0:0.5" Value="Log In" />
+                            </StringAnimationUsingKeyFrames>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.5" BeginTime="0:0:0.5" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="0" Duration="0:0:0.5" />
+                            <StringAnimationUsingKeyFrames Storyboard.TargetProperty="(TextBlock.Text)">
+                                <DiscreteStringKeyFrame KeyTime="0:0:0.5" Value="TravelPal" />
+                            </StringAnimationUsingKeyFrames>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1" Duration="0:0:0.5" BeginTime="0:0:0.5" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Style.Triggers>
+        </Style>-->
+
+        <!--Diffrent styles END-->
 
     </Application.Resources>
 </Application>
