--- a/TravelPal/Pages/SplashScreenPage.xaml
+++ b/TravelPal/Pages/SplashScreenPage.xaml
@@ -26,16 +26,17 @@
         </Grid.RowDefinitions>
 
         <TextBlock
-    Name="TxtBlckLogoLogIn"
-    Grid.Column="1"
-    Grid.Row="1"
-    FontFamily="{StaticResource MainFont}"
-    FontSize="100"
-    FontWeight="ExtraBold"
-    Text="TravelPal"
-    VerticalAlignment="Center"
-    HorizontalAlignment="Center"
-    MouseLeftButtonDown="TxtBlckLogoLogIn_OnMouseLeftButtonDown">
+        Name="TxtBlckLogoLogIn"
+        Grid.Column="1"
+        Grid.Row="1"
+        FontFamily="{StaticResource MainFont}"
+        FontSize="100"
+        FontWeight="ExtraBold"
+        Text="TravelPal"
+        VerticalAlignment="Center"
+        HorizontalAlignment="Center"
+        MouseLeftButtonDown="TxtBlckLogoLogIn_OnMouseLeftButtonDown"
+        Cursor="Hand">
             <TextBlock.Style>
                 <Style TargetType="TextBlock">
                     <Setter Property="Opacity" Value="1" />
