--- a/TravelPal/Pages/RegisterPage.xaml
+++ b/TravelPal/Pages/RegisterPage.xaml
@@ -4,11 +4,12 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TravelPal.Pages"
+      xmlns:themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
       mc:Ignorable="d" 
       d:DesignHeight="{StaticResource PageHeight}" 
       d:DesignWidth="{StaticResource PageWidth}"
       Title="RegisterPage"
-      Background="{StaticResource GradientHeaderBackground}"
+      Background="Transparent"
       ShowsNavigationUI="False">
 
     <Grid>
@@ -69,7 +70,65 @@
             Width="auto"
             Height="50"/>
 
-        <Label></Label>
+        <Label  
+            Grid.Column="1"
+            Grid.Row="2"
+            Content="Country of origin:"
+            Foreground="{StaticResource TextColor}"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Right"
+            FontFamily="{StaticResource MainFont}"
+            FontSize="30"/>
+
+
+        <StackPanel
+            Grid.Column="2"
+            Grid.Row="2"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal"
+            Margin="0,0,0,0">
+            <Label
+                Content="Eu Country"></Label>
+            <CheckBox
+                Name="ChkBxEuCountry"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center" 
+                Checked="ChkBxEuCountry_Checked"
+                Unchecked="ChkBxEuCountry_OnUnchecked"
+                IsThreeState="False"
+                IsChecked="False"
+                ></CheckBox>
+        </StackPanel>
+
+        <ComboBox
+            Name="ComboBxCountries"
+            Grid.Column="2"
+            Grid.Row="2"
+            Height="45"
+            VerticalContentAlignment="Center"
+            HorizontalContentAlignment="Center"
+            FontSize="20"
+            Background="#10000000"
+            BorderThickness="0,0,0,1.1"
+            BorderBrush="Black">
+            <ComboBox.ItemContainerStyle>
+                <Style TargetType="{x:Type ComboBoxItem}">
+                    <Setter Property="FontSize" Value="14" />
+                </Style>
+            </ComboBox.ItemContainerStyle>
+        </ComboBox>
+
+        <Button
+            Name="BtnRegister"
+            Grid.Column="2"
+            Grid.Row="3"
+            
+            Width="150"
+            Height="50"
+            Click="BtnRegister_Click"
+
+            />
 
 
     </Grid>
