--- a/TravelPal/Pages/RegisterPage.xaml
+++ b/TravelPal/Pages/RegisterPage.xaml
@@ -10,7 +10,8 @@
       d:DesignWidth="{StaticResource PageWidth}"
       Title="RegisterPage"
       Background="Transparent"
-      ShowsNavigationUI="False">
+      ShowsNavigationUI="False"
+      DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -47,7 +48,8 @@
             BorderBrush="Black"
             FontSize="20"
             Width="auto"
-            Height="50"/>
+            Height="50"
+            Text="{Binding UserName}"/>
 
         <Label  
             Grid.Column="1"
@@ -68,7 +70,8 @@
             BorderBrush="Black"
             FontSize="20"
             Width="auto"
-            Height="50"/>
+            Height="50"
+            Text="{Binding Password }"/>
 
         <Label  
             Grid.Column="1"
@@ -111,7 +114,8 @@
             FontSize="20"
             Background="#10000000"
             BorderThickness="0,0,0,1.1"
-            BorderBrush="Black">
+            BorderBrush="Black"
+            SelectionChanged="ComboBxCountries_OnSelectionChanged">
             <ComboBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ComboBoxItem}">
                     <Setter Property="FontSize" Value="14" />
@@ -119,16 +123,53 @@
             </ComboBox.ItemContainerStyle>
         </ComboBox>
 
+        <Label
+            Name="LblErrorMessege"
+            Grid.Column="2"
+            Grid.Row="3"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Center"
+            FontSize="15"
+            />
         <Button
             Name="BtnRegister"
             Grid.Column="2"
             Grid.Row="3"
-            
+            Content="Create User"
             Width="150"
             Height="50"
+            Background="{StaticResource DarkMint}"
+            FontSize="20"
+            VerticalAlignment="Bottom"
             Click="BtnRegister_Click"
-
             />
+        <Button
+            Name="BtnLogIn"
+            Grid.Column="2"
+            Grid.Row="4"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Background="Transparent"
+            Content="Log In"
+            BorderThickness="0,0,0,1"
+            Foreground="Black"
+            BorderBrush="Black"
+            Click="BtnLogIn_OnClick"
+            MouseEnter="BtnLogIn_OnMouseEnter"
+            MouseLeave="BtnLogIn_OnMouseLeave"
+            Cursor="Hand"
+            FontSize="15">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
 
 
     </Grid>
