added click event on the developer button

--- a/TravelPal/Pages/AddNewTravelPage.xaml
+++ b/TravelPal/Pages/AddNewTravelPage.xaml
@@ -520,7 +520,8 @@
         <Button
             Name="BtnDeveloperButton"
             Grid.Column="2"
-            Grid.Row="8" Click="BtnDeveloperButton_Click"></Button>
+            Grid.Row="8" Click="BtnDeveloperButton_Click"
+            ></Button>
 
             <Button
             Name="BtnCreateNewTravel"
